fixed long words in about soup collapsing to two lines upon right border impact

--- a/static/basic.css
+++ b/static/basic.css
@@ -40,6 +40,8 @@ body {
     color:black;
     opacity: 0;
     font-size: 20px;
+    white-space: nowrap;
+    overflow: visible;
 }
 
 #left_panel {
